<resources>
    <string name="app_name">AFAR PARTNER</string>
    <string name="hyperlink"><a href="https://learntodroid.com">Forgot your Password?</a></string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Vehile">
        <item>Auto</item>
        <item>Bike</item>
    </string-array>
    <string-array name="State">
        <item>TamilNadu</item>

    </string-array>
    <string-array name="City">
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Madurai</item>
    </string-array>
    <string name="no_record_found">No records found</string>
    <string name="upload_via_camera">Upload via Camera</string>
    <string name="upload_via_gallery">Upload via Gallery</string>
    <string name="application_has_been_updated_successfully">Application has been updated successfully</string>
    <string name="img_size_alert">Size must be less than 12KB - 20KB</string>
    <string name="ok">ok</string>
    <string name="gotiit">Get Started</string>
    <string name="header">Pilot\'s Details</string>
    <string name="home">Home</string>
    <string name="password_placeholder">Password</string>
    <string name="password_hint">********</string>
    <string name="profile">Profile</string>
    <string name="verification_code">Verification Code</string>
    <string name="phone_auth_subtitle">Please enter your phone number to verify your account</string>
    <string name="refer_code"><u>Have a Referral code?click here to enter referral code</u></string>
    <string name="otp_auth_subtitle"> OTP received in %1$s</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">send</string>
    <string name="otp">Otp</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="skip">Skip</string>
    <string name="open_file">Open File</string>
    <string name="facebook_app_id">839020780855404</string>
    <string name="fb_login_protocol_scheme">fb839020780855404</string>
    <string name="facebook_client_token">56789</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dash">Dashboard</string>
    <string name="menu_wallets">My wallets</string>
    <string name="menu_history">History</string>
    <string name="menu_rides">Your Rides</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_refer">Refer a Friend</string>
    <string name="menu_savedplace">Saved Places</string>
    <string name="menu_help">Support</string>
    <string name="menu_about">About</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicmFoYW1hdGhqYW4iLCJhIjoiY2w5aWF0Z3B5MTVtMjN2cnExc3FxdjkyMyJ9.acI6a5iNQodY6esmIs-A-w</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="first_fragment_label">Pilot Details</string>
    <string name="second_fragment_label">Pilot Details</string>
    <string name="third_fragment_label">Pilot Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_taji">Welcome To AFAR CABS!!!</string>
    <string name="hello">Hello</string>
    <string name="sign_in_text">Sign in with Admin Credentials</string>
    <string name="email_placeholder">E-mail</string>
    <string name="email_hint">E-mail Address</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="accountSignUp">Create a New AFAR Admin Account</string>
    <string name="sign_up_text">Sign up to get your AFAR Admin account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="fname_placeholder">First Name</string>
    <string name="lname_placeholder">Last Name</string>
    <string name="phone_number_placeholder">Phone Number</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="sign_up">Create</string>
    <string name="create_account">Create Account</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">GOOGLE_MAPS_API</string>
    <string name="firebase_functions_base_url" templateMergeStrategy="preserve" translatable="false">https://firebase_functions_base_url/</string>
    <string name="publishablekey" templateMergeStrategy="preserve" translatable="false">stripe_pk_key</string>
    <string name="stripe_client_key" templateMergeStrategy="preserve" translatable="false">stripe_sk_key</string>
    <string name="firebase_hosting_url" templateMergeStrategy="preserve" translatable="false">https://firebase_hosting_url/</string>
    <string name="phone_driver">Phone</string>
    <string name="call_uber">Call Car</string>
    <string name="type_4">Bike</string>
    <string name="type_3">SUV</string>
    <string name="type_2">Van</string>
    <string name="type_1">Car</string>
    <string name="phone">Phone</string>
    <string name="name">Name </string>
    <string name="confirm">Confirm</string>
    <string name="working">Working</string>
    <string name="destination">Destination</string>
    <string name="picked_customer">Picked customer</string>
    <string name="car">Car</string>
    <string name="balance">Balance</string>
    <string name="payout">Payout</string>
    <string name="from_to">From - To</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="getting_driver">Getting Your Driver ....</string>
    <string name="looking_driver">Looking For Your Driver…</string>
    <string name="driver_here">Driver Here</string>
    <string name="driver_found">Driver Found</string>
    <string name="drive_complete">Drive Completed</string>
    <string name="not_approved">Your Account Has Not Been Approved</string>
    <string name="style_json">
  [
        {
        \elementType\: \"geometry\",
        \stylers\: [{\color\: \"#242f3e"\}]
        },
        {
        \elementType\: \"labels.text.stroke\",
        \stylers\: [{\color\: \"#242f3e"\}]
        },
        {
        \elementType\: \"labels.text.fill\",
        \stylers\: [{\color\: \"#746855"\}]
        },
    {
        \"featureType\": \"all\",
        \"elementType\": \"labels\",
        \"stylers\": [
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"administrative\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"visibility\": \"on\"
            },
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"landscape\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.attraction\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.business\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.government\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#dfdcd5\"
            }
        ]
    },
    {
        \"featureType\": \"poi.medical\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#dfdcd5\"
            }
        ]
    },
    {
        \"featureType\": \"poi.park\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#bad294\"
            }
        ]
    },
    {
        \"featureType\": \"poi.place_of_worship\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.school\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.sports_complex\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
            {
                \"color\": \"#ffffff\"
            }
        ]
    },
    {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
            {
                \"color\": \"#ffffff\"
            }
        ]
    },
    {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"road.local\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
            {
                \"color\": \"#fbfbfb\"
            }
        ]
    },
    {
        \"featureType\": \"road.local\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"transit\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"water\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#a5d7e0\"
            }
        ]
    }
]
  </string>
    <string name="to">To…</string>
    <string name="from">From…</string>
    <string name="no_phone_call_permissions">You didn\'t give phone call permissions</string>
    <string name="driver_no_phone">Driver doesn\'t have a connected number</string>
    <string name="your_trips">Your Trips</string>
    <string name="waiting_for_location">Waiting for Location</string>
    <string name="save">save</string>
    <string name="payment">payment</string>
    <string name="add_card">Add Card</string>
    <string name="current_location">Current Location</string>
    <string name="phone_text">Phone Permission Required</string>
    <string name="allow_permission">ALLOW PERMISSION</string>
    <string name="authenticate_ride">For us to authenticate your device and let you call customers directly from the app</string>
</resources>