<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10sp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">



            <ImageView
                android:id="@+id/image"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:src="@drawable/telephone_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:paddingBottom="10sp"
                android:text="@string/phone_text"                  android:textColor="@color/labelrecyclerview"
                android:textSize="20sp"
                app:fontFamily="@font/dmsans_bold"

                />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20sp"
                android:text="@string/authenticate_ride"                android:textColor="@color/labelrecyclerview"
                android:textSize="16sp"
                app:fontFamily="@font/dmsans_medium"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_permission"

        android:background="@drawable/square_border_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:fontFamily="@font/dmsans_bold"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>